# novel_llm

./: Cargo.toml
data/: data.txt  vocab.txt
src/: config.rs  data_loader.rs  feed_forward.rs  ff_layer.rs  gelu.rs  gpt.rs  gpt_data_batcher.rs  gpt_data_loader.rs  gpt_dataset_iter.rs  gpt_dataset_v1.rs  gpt_model.rs  layer_norm.rs  main.rs  main_eval.rs  multi_head_attention.rs  sequential_transformers.rs  tokenizer.rs  transformer_block.rs
