[package]
name = "novel_llm"
version = "0.1.0"
edition = "2024"

exclude = [
    "data/*",
]

[dependencies]
anyhow = "1.0.98"
candle-core = { path = "/Users/buba/Downloads/candle/candle-core" }
candle-datasets = { path = "/Users/buba/Downloads/candle/candle-datasets" }
candle-nn = { path = "/Users/buba/Downloads/candle/candle-nn" }
ndarray = "0.16.1"
plotly = "0.13.1"
rand = "0.9.1"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
